Fixed some bugs

--- a/css/includes/index.less
+++ b/css/includes/index.less
@@ -84,10 +84,12 @@
           }
 
           .bottom-part {
-            padding: 7px 0;
             background: @black;
 
             a {
+              display: inline-block;
+              width: 100%;
+              padding: 7px 0;
               color: @white;
               letter-spacing: 1px;
             }
