--- a/css/includes/all.less
+++ b/css/includes/all.less
@@ -3,7 +3,7 @@
 body {
   background: @white;
   color: @black;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Lato", sans-serif;
 
   &::-webkit-scrollbar {
     width: 6px;
