--- a/css/includes/index.less
+++ b/css/includes/index.less
@@ -27,20 +27,11 @@
       }
 
       .skills {
-        .progress {
-          height: 30px;
-          margin-bottom: 30px;
-          box-shadow: none;
-          border: 1px solid @black;
-          border-radius: 0;
-          background: @white;
+        ul {
+          margin-bottom: 0;
 
-          .progress-bar {
-            padding: 5px 15px;
-            background: @black;
-            text-align: left;
-            font-weight: 600;
-            letter-spacing: 1px;
+          li {
+            margin-bottom: 5px;
           }
         }
       }
