--- a/css/style.less
+++ b/css/style.less
@@ -25,51 +25,51 @@
 /* ===== // SPACERS =====*/
 /* ===== FONT SIZES =====*/
 @media (max-width: @screen-md-min) {
-  // h1 {
-  //   font-size: 36px !important;
-  // }
-  //
-  // h2 {
-  //   font-size: 33px !important;
-  // }
-  //
-  // h3 {
-  //   font-size: 30px !important;
-  // }
+  h1 {
+    font-size: 36px !important;
+  }
+
+  h2 {
+    font-size: 33px !important;
+  }
+
+  h3 {
+    font-size: 30px !important;
+  }
 }
 @media (max-width: @screen-sm-min) {
-  // h1 {
-  //   font-size: 33px !important;
-  // }
-  //
-  // h2 {
-  //   font-size: 31px !important;
-  // }
-  //
-  // h3 {
-  //   font-size: 27px !important;
-  // }
-  //
-  // p {
-  //   font-size: px !important;
-  // }
+  h1 {
+    font-size: 33px !important;
+  }
+
+  h2 {
+    font-size: 31px !important;
+  }
+
+  h3 {
+    font-size: 27px !important;
+  }
+
+  p {
+    font-size: 16px !important;
+  }
 }
 @media (max-width: @screen-xs-max) {
-  // h1 {
-  //   font-size: 30px !important;
-  // }
-  //
-  // h2 {
-  //   font-size: 29px !important;
-  // }
-  //
-  // h3 {
-  //   font-size: 24px !important;
-  // }
-  //
-  // p {
-  //   font-size: 14px !important;
-  // }
+  h1 {
+    font-size: 30px !important;
+  }
+
+  h2 {
+    font-size: 29px !important;
+  }
+
+  h3 {
+    font-size: 24px !important;
+  }
+
+  p {
+    font-size: 14px !important;
+  }
 }
 /* ===== // FONT SIZES =====*/
 /* ===== COLORS =====*/
