--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,6 +42,7 @@ img {
 }
 
 a {
+	cursor: pointer;
 	text-decoration: none;
 }
 
@@ -85,6 +86,9 @@ h2::after {
 p {
 	margin: 8px 0;
 	text-align: justify;
+}
+
+p, b, li, time {
 	font-size: 18px;
 }
 
@@ -142,32 +146,32 @@ main {
 	background-color: white;
 }
 
-.about h1 {
+#about h1 {
 	margin-top: 25px;
 }
 
-.about .columns p {
+#about .columns p {
 	margin-bottom: 10px;
 }
 
-.about .columns ul {
+#about .columns ul {
 	margin-bottom: 0;
 }
 
-.about .columns ul li {
+#about .columns ul li {
 	margin-bottom: 0.5rem;
 }
 
-.portfolio h3 {
+#portfolio h3 {
 	margin-bottom: 0;
 }
 
-.portfolio time {
+#portfolio time {
 	display: block;
 	text-align: right;
 }
 
-.portfolio p {
+#portfolio p {
 	margin: 0 0 10px;
 }
 
