--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,76 +1,83 @@
-/* ===== FONT =====*/
-
-@font-face {
-	src: url('/fonts/TitilliumWeb-Regular.ttf');
-	font-family: Titillium;
+h1, h2::after {
+	background-color: var(--black)
 }
 
-/* ===== // FONT =====*/
+h1, time {
+	display: block
+}
 
-/* ===== COLORS =====*/
+a, nav ul li a {
+	text-decoration: none
+}
+
+h1, nav ul li a, nav ul li a:hover {
+	color: var(--white)
+}
+
+@font-face {
+	src: url(/fonts/TitilliumWeb-Regular.ttf);
+	font-family: Titillium
+}
 
 :root {
 	--white: #fff;
 	--black: #222;
 	--gray: #F6F6F6;
-	--blue: #25F;
+	--blue: #25F
 }
 
-/* ===== // COLORS =====*/
-
-/* ===== COMMON ===== */
-
 body::-webkit-scrollbar {
-	width: 8px;
+	width: 8px
 }
 
 body::-webkit-scrollbar-button {
-	display: none;
+	display: none
 }
 
 body::-webkit-scrollbar-track, body::-webkit-scrollbar-track-piece {
 	border-left: 1px solid var(--black);
-	background: var(--white);
+	background: var(--white)
 }
 
 body::-webkit-scrollbar-thumb {
-	background: var(--black);
+	background: var(--black)
 }
 
 img {
 	max-width: 100%;
-	height: auto;
+	height: auto
 }
 
 a {
-	cursor: pointer;
-	text-decoration: none;
+	cursor: pointer
 }
 
 a, a:hover {
-	color: var(--blue);
+	color: var(--blue)
 }
 
 a:hover {
-	text-decoration: underline;
+	text-decoration: underline
 }
 
-a::selection, h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, b::selection, time::selection, li::selection, p::selection, span::selection {
+a::-moz-selection, b::-moz-selection, h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, li::-moz-selection, p::-moz-selection, span::-moz-selection, time::-moz-selection {
 	background-color: var(--black);
-	color: var(--white);
+	color: var(--white)
+}
+
+a::selection, b::selection, h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, li::selection, p::selection, span::selection, time::selection {
+	background-color: var(--black);
+	color: var(--white)
 }
 
 h1 {
-	display: block;
 	margin: 0 -15px 30px;
-	padding: 3px 20px;
-	background-color: var(--black);
-	color: var(--white);
+	padding: 3px 20px
 }
 
 h2 {
 	position: relative;
-	margin: 30px 0 25px;
+	margin: 30px 0 25px
 }
 
 h2::after {
@@ -80,39 +87,40 @@ h2::after {
 	left: 0;
 	right: 0;
 	height: 3px;
-	background-color: var(--black);
-	border-radius: 5px;
+	border-radius: 5px
 }
 
 h3 {
-	margin-bottom: 0;
+	margin-bottom: 0
 }
 
 p {
 	margin: 8px 0;
-	text-align: justify;
+	text-align: justify
 }
 
-p, b, li, time {
-	font-size: 18px;
+b, li, p, time {
+	font-size: 18px
 }
 
 time {
-	display: block;
-	text-align: right;
+	text-align: right
+}
+
+.created p, nav ul {
+	text-align: center
 }
 
 .spacer {
-	height: 75px;
+	height: 75px
 }
-
-/* ===== // COMMON ===== */
 
 body {
 	background: var(--gray);
-	box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .5);
+	box-shadow: 0 0 4px rgba(0, 0, 0, .5);
 	font-family: Titillium;
-	color: var(--black);
+	color: var(--black)
 }
 
 nav.container {
@@ -121,123 +129,106 @@ nav.container {
 	top: 0;
 	right: 0;
 	left: 0;
-	background: var(--black);
+	background: var(--black)
 }
 
 nav ul {
-	margin: 0;
-	text-align: center;
+	margin: 0
 }
 
 nav ul li {
 	display: inline-block;
-	margin: 0;
+	margin: 0
 }
 
 nav ul li a {
 	display: inline-block;
 	padding: 15px;
 	text-transform: uppercase;
-	text-decoration: none;
 	letter-spacing: 1px;
-	color: var(--white);
 	font-size: 12px;
-	font-weight: 600;
+	font-weight: 600
 }
 
 nav ul li a:hover {
-	text-decoration: underline;
-	color: var(--white);
+	text-decoration: underline
 }
 
 main {
 	position: relative;
 	padding: 50px 40px 20px;
-	background-color: var(--white);
+	background-color: var(--white)
 }
 
 #about h1 {
-	margin-top: 25px;
+	margin-top: 25px
 }
 
 #about .columns p {
-	margin-bottom: 10px;
+	margin-bottom: 10px
 }
 
 #about .columns ul {
-	margin-bottom: 0;
+	margin-bottom: 0
 }
 
 #about .columns ul li {
-	margin-bottom: 0.5rem;
+	margin-bottom: .5rem
 }
 
 #portfolio p {
-	margin: 0 0 10px;
+	margin: 0 0 10px
 }
 
 .created {
 	margin: 60px -15px 0;
 	padding: 7px 0;
 	background-color: var(--black);
-	color: #fff;
+	color: #fff
 }
 
 .created p {
-	margin: 0;
-	text-align: center;
+	margin: 0
 }
 
 .created p a {
 	color: #fff;
-	text-decoration: underline;
+	text-decoration: underline
 }
 
-/* Larger than Desktop HD */
-
-@media (max-width: 1200px) {
+@media (max-width:1200px) {
 	h1:not(:first-child) {
-		margin-top: 0;
+		margin-top: 0
 	}
 }
 
-/* Larger than desktop */
-
-@media (max-width: 1000px) {
+@media (max-width:1000px) {
 	.four.columns {
-		width: 45%;
+		width: 45%
 	}
 	.four.columns:last-child {
-		margin-left: 0;
+		margin-left: 0
 	}
 }
 
-/* Larger than tablet */
-
-@media (max-width: 750px) {
+@media (max-width:750px) {
 	h1:not(:first-child) {
-		margin-top: -10px;
+		margin-top: -10px
 	}
-	.four.columns {
+	.four.columns, .six.columns {
 		width: 100%;
-		margin-left: 0;
+		margin-left: 0
 	}
 	h1 {
-		margin: 30px 0;
+		margin: 30px 0
 	}
 	main {
-		padding: 40px 20px 20px;
+		padding: 40px 20px 20px
 	}
 }
 
-/* Larger than phablet */
-
-@media (max-width: 550px) {}
-
-/* Larger than mobile */
-
-@media (max-width: 400px) {
+@media (max-width:400px) {
 	nav ul li a {
-		padding: 10px;
+		padding: 10px
 	}
 }
